fix white space

--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -18,6 +18,7 @@
 }
 
 /* ----------------------- MAIN CONTENT STYLES ----------------------- */
+/* * { border: 1px solid red; } */
 
 *,
 *::before,
@@ -26,10 +27,12 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   user-select: none;
+  align-content: center;
+}
+
+.container {
+  
   border: var(--border);
 }
 
@@ -40,7 +43,6 @@ footer {
   align-items: center;
   font-family: var(--fontOne);
   color: var(--colorOne);
-  margin: var(--margin);
   text-align: center;
 }
 
@@ -79,7 +81,6 @@ a:active {
   background-color: var(--colorTwo);
   border: none;
   border-radius: 40%;
-  margin: 10%;
   color: var(--colorFive);
   padding: 10px;
   font-family: var(--fontTwo);
@@ -141,9 +142,9 @@ a:active {
 
 /* ----------------------- METRONOME CONTENT ----------------------- */
 
-.metronome {
+/* .metronome {
   margin: var(--margin);
-}
+} */
 
 .bpm-display {
   display: flex;
@@ -255,7 +256,7 @@ input[type="range"]::-moz-range-track {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: auto 50px auto 50px;
+  /* margin: auto 50px auto 50px; */
 }
 
 .beats button {
@@ -326,7 +327,7 @@ input[type="range"]::-moz-range-track {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 2% 3% 2% 3%;
+  /* margin: 2% 3% 2% 3%; */
   padding: 12px 20px;
   box-sizing: border-box;
   border: 2px solid var(--colorOne);
@@ -359,7 +360,7 @@ input[type="range"]::-moz-range-track {
 #noteBtnContainer {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 1%;
+  /* margin-top: 1%; */
   width: 55%;
 }
 
